src/test/deca/context/valid/provided/ContextSansObjet/OperationsArithmetiques/DivideIntFloat.deca
//Description :
//	Vérification contextuelle de l'opérateur / avec des variables int et float
//
//Résultats :
//	ok

{
    int x = 2/1;
    float y = 3;
    float z = x/y;
}