src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/NotInt.deca
//Description:
//  Vérification contextuelle de l'opérateur ! sur un type int
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type boolean attendu

{
   !3;
}